<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CFP_Ultra</string>
    <string name="action_settings">Settings</string>
    
    <string name="service_name">Ultra Service</string>
    <string name="debug_text">loading CFP_ULTRA.</string>
    <string name="scan_button_text">SCANNER</string>
    <string name="colour_match_text">alpha val: </string>
    <string name="anim_desc">rotating animation</string>
    <string name="bg_desc">scrolling background</string>

    <string name="audio_check_pre_1">Checking for best audio record type.</string>
    <string name="audio_check_pre_3">Error in setting up audio output.</string>

    <!--
options menu
-->
    <string name="action_audio_scan_settings">NUHF Scan steps</string>
    <string name="dialog_freq_step">Frequency steps</string>
    <string name="freq_step_10_text" translatable="false">10 Hz</string>
    <string name="freq_step_25_text" translatable="false">25 Hz (default)</string>
    <string name="freq_step_50_text" translatable="false">50 Hz</string>
    <string name="freq_step_75_text" translatable="false">75 Hz</string>
    <string name="freq_step_100_text" translatable="false">100 Hz</string>

    <string name="action_audio_scan_ranges">NUHF Scan range</string>
    <string name="dialog_freq_range">Frequency range</string>
    <string name="freq_range_one" translatable="false">18kHz - 21kHz (default)</string>
    <string name="freq_range_two" translatable="false">19kHz - 22kHz</string>

    <string name="action_sensitivity_settings">Sensitivity</string>
    <string name="dialog_sensitivity_text">Beacon loudness level</string>
    <string name="magnitude_50_text">50 dB (light rain)</string>
    <string name="magnitude_60_text">60 dB (talking)</string>
    <string name="magnitude_70_text">70 dB (busy traffic)</string>
    <string name="magnitude_80_text">80 dB (heavy traffic)</string>
    <string name="magnitude_90_text">90 dB (trucks, shouting)</string>
    <string name="magnitude_93_text">94 dB (food mixer, default)</string>
    <string name="magnitude_100_text">100 dB (jack hammer)</string>

    <string name="action_window_settings">FFT Window</string>
    <string name="dialog_window_text">FFT Window type</string>
    <string name="dialog_window_fft_1" translatable="false">Hann</string>
    <string name="dialog_window_fft_2" translatable="false">Blackman (default)</string>
    <string name="dialog_window_fft_3" translatable="false">Hamming</string>
    <string name="dialog_window_fft_4" translatable="false">Nuttall</string>
    <string name="dialog_window_fft_5" translatable="false">Blackman-Nuttall</string>

    <string name="option_dialog_8">Polling speed (ms):\u0020</string>
    <string name="option_dialog_9">Frequency steps (hz):\u0020</string>
    <string name="option_dialog_10">Frequency range set 18kHz - 21kHz.</string>
    <string name="option_dialog_11">Frequency range set 19kHz - 22kHz.</string>
    <string name="option_dialog_12">Loudness level (dB):\u0020</string>
    <string name="option_dialog_13">FFT Window set to:\u0020</string>

    <string name="action_mode_settings">Mode Select</string>
    <string name="mode_type_1">Letter Sequence</string>
    <string name="mode_type_2">Binary Bits</string>
    <string name="mode_type_3">Clock FSK</string>

    <string name="action_bundle_print">AudioBundle print</string>

    <!--
AudioChecker.java
-->
    <string name="audio_check_1">determine internal audio failure.</string>
    <string name="audio_check_2">Error: USB device container has no device.</string>
    <string name="audio_check_3">determine USB audio failure.</string>
    <string name="audio_check_4">Can start Microphone Check.</string>
    <string name="audio_check_5">Possible microphone in use.</string>
    <string name="audio_check_6">check audioBufferState read error - status id:\u0020</string>
    <string name="audio_check_7">check audioBufferState init error.</string>
    <string name="audio_check_8">audioBufferState no error, checking\u2026</string>
    <string name="audio_check_9">check audioBufferState exception on close.</string>
    <string name="audio_check_10">Stopping all audio.</string>
    <string name="audio_check_11">Audio record stopped and released.</string>
    <string name="audio_check_12">audioRecord is null.</string>

</resources>
