<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cityfreqs.cfp_ultra.MainActivity" >

    <group android:id="@+id/scanner_group">
        <item
            android:id="@+id/action_audio_scan_settings"
            android:orderInCategory="20"
            app:showAsAction="never"
            android:title="@string/action_audio_scan_settings"/>
        <item
            android:id="@+id/action_audio_scan_range"
            android:orderInCategory="25"
            app:showAsAction="never"
            android:title="@string/action_audio_scan_ranges"/>

        <item
            android:id="@+id/action_sensitivity_settings"
            android:orderInCategory="30"
            app:showAsAction="never"
            android:title="@string/action_sensitivity_settings"/>

        <item
            android:id="@+id/action_fft_window_settings"
            android:orderInCategory="35"
            app:showAsAction="never"
            android:title="@string/action_window_settings"/>
    </group>

</menu>
