<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.cityfreqs.cfp_ultra.MainActivity" >
        
	    <ImageView
	        android:id="@+id/bg_one"
	        android:contentDescription="@string/bg_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scaleType="fitXY"
	        android:src="@drawable/clouds_bg"/>
	
	    <ImageView
	        android:id="@+id/bg_two"
	        android:contentDescription="@string/bg_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scaleType="fitXY"
	        android:src="@drawable/clouds_bg"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <TextView
	        android:id="@+id/debug_text"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:gravity="bottom"
	        android:scrollbars="vertical"
	        android:background="#000000"
	        android:textColor="#00ff00"
	        android:text="@string/debug_text" />
	    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:contentDescription="@string/anim_desc"
	        android:layout_width="120dp"
	        android:layout_height="120dp"
	        android:layout_margin="30dp"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:layout_below="@+id/debug_text"
	        android:src="@drawable/speaker_cone" />

</RelativeLayout>